--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,11 @@
+include bibulous.py
+include bibulous_test.py
+include bibulous_citeextract.py
+include bibulous_authorextract.py
+
 include README.rst
 include LICENSE.txt
 include FAQ.rst
-
+graft test
+graft templates
+graft doc
