Modified BST files in testing suite to use the new ".eds_message()" operator.
Modified the templates in the "templates/" folder also ti use the "eds_message()" operator.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,7 @@
 include bibulous.py
 include bibulous_test.py
 include bibulous_authorextract.py
+include bibulous_profiler.py
 
 include README.rst
 include LICENSE.txt
