Updated PyPi package, and removed testing files from it.

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,11 +1,10 @@
 include bibulous.py
-include bibulous_test.py
 include bibulous_authorextract.py
 include bibulous_profiler.py
 
 include README.rst
 include LICENSE.txt
-graft test
 graft templates
 graft doc
 graft examples
+prune test
